# thesis

./: .gitattributes  .gitignore  Plots for Presentation.ipynb  README.md  build.sh  environment.yml  limits.py  pyproject.toml  setup.py
dipole_form_factors/: Dipole Approximation Comparison.ipynb  Electric and Magnetic Dipole Moment Limits.ipynb  LFV Decay Limits.ipynb
displaced_vectors/: Displaced Vectors at Lepton-Nucleus Colliders.ipynb
formulae derivations/: ._F_3pt_verification.nb  ._trilepton2.nb  ._wardidentity.nb  F3pt.ipynb  F_3pt_verification.nb  Untitled.ipynb  ff.nb  liljlkll.nb  scalar_product_2_2_amplitude.nb  scalar_production_amplitude.nb  terms.nb  trilepton.nb  trilepton2.nb  vector_product_2_2_amplitude.nb  vector_production_amplitude.nb  wardidentity.nb
lepton_nucleus_collisions/: ._limits.py  Cache Differential Cross Sections.ipynb  Cross Section Comparison.ipynb  Cross-Section Plots.ipynb  Cross-Sections at Lepton Nucleus Collisions.ipynb  Differential Cross Section Comparison.ipynb  LFV ALPs at Lepton-Nucleus Colliders-Copy1.ipynb  LFV ALPs at Lepton-Nucleus Colliders.ipynb  LFV Scalars at Lepton Nucleus Colliders.ipynb  Limits on LFV ALPs and Scalars at Lepton Nucleus Colliders.ipynb  limits.py  process_crossx_data.py
lfv_higgs_decays/: Higgs ALP Decays.ipynb  limits.py
lfv_lepton_observables/: .___init__.py  ._limits.py  Dipole Approximation Comparison.ipynb  Electric and Magnetic Dipole Moment Limits.ipynb  LFV Decay Limits.ipynb  limits.py
phys/: constants.py  limits.py  scalar_ALP_EFT.py  utils.py
src/: macros.tex  main.tex
(+150 files in other folders)
